examples/test/testpolicy6766.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6766
  namespace: namespace422
spec:
  podSelector:
    matchLabels:
      key35: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value21
          key3: value27
          key1: value24
      podSelector:
        matchLabels:
          key21: value20
          key34: value2
          key2: value40
